Revision history for Net-Statsd-Lite

{{$NEXT}}
  [Documentation]
  - Update copyright year.

v0.4.10   2020-07-31 14:52:09+01:00 Europe/London
  [Documentation]
  - Update copyright year.

  [Toolchain]
  - Add core modules in the prerequisites.

v0.4.9    2019-12-21 10:22:05+00:00 Europe/London
  [Documentation]
  - Fixed typo, thanks @mrdvt92.

  [Tests]
  - Bumped minimum version prerequisite for Test::TCP.

v0.4.8    2019-07-21 11:37:59+01:00 Europe/London
  [Tests]
  - Specify a minimum version of Test::TCP for Net::EmptyPort.

v0.4.7    2019-07-20 11:00:08+01:00 Europe/London
  [Documentation]
  - Added INSTALL file to the distribution.

  - Bumped copyright year.

v0.4.6    2018-09-11 23:36:11+01:00 Europe/London
  [Tests]
  - Updated tests to be more Windows-friendly.

v0.4.5    2018-09-11 23:22:09+01:00 Europe/London
  [Documentation]
  - Added a note about the histogram method not being supported
    by most StatsD daemons.

v0.4.4    2018-07-02 18:17:31+01:00 Europe/London
  [Bug Fixes]
  - fix inlined type constraints, #1 (thanks @tobyink).

  [Toolchain]
  - Added keywords to distribution metadata.

v0.4.3    2018-05-21 21:55:30+01:00 Europe/London
  [Documentation]
  - Fixed minor typo in POD.

  [Toolchain]
  - Removed core and redundant prereqs.

v0.4.2    2018-02-14 00:38:33+00:00 Europe/London
  [Tests]
  - Remove the use of Test::TCP in an attempt to work around Windows
    test failures.

  [Other Changes]
  - Perltidied source.

v0.4.1    2018-02-10 23:53:37+00:00 Europe/London
  [Documentation]
  - Fixed reference to the wrong module in Net::Statsd::Lite::Types.

  [Tests]
  - Add sleep to give a chance for the test server to start.

v0.4.0    2018-02-07 21:41:25+00:00 Europe/London
  [Enhancements]
  - Removed the use of IO::String, which increases the performance
    significantly.

  - Type checking of values is only done when run in strict mode.

  - Improve performance when autoflush is enabled.
