@@ -30,6 +30,11 @@ exclude_match = cpanfile*
 remove = Type::Library
 remove = Type::Utils
 
+[Prereqs]
+-phase = develop
+-relationship = requires
+Test::Vars = 0.015
+
 [EnsurePrereqsInstalled]
 :version = 0.003
 type = requires
