@@ -4,6 +4,9 @@ Revision history for Net-Statsd-Lite
   [Documentation]
   - Update copyright year.
 
+  [Tests]
+  - Add more author tests.
+
 v0.4.10   2020-07-31 14:52:09+01:00 Europe/London
   [Documentation]
   - Update copyright year.
